<resources>
    <string name="app_name">bumineun</string>
    <string name="username">username</string>
    <string name="황영합이당">반갑습니다</string>
    <string name="logo">logo_image</string>
    <string name="logo_user">logo_user</string>
    <string name="newscript">newsscript</string>
    <string name="tailImg">kakaotallk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>