<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    layout_width="wrap_content"
    layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:id="@+id/layerhead"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/img" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:layout_weight=".5"
                    android:text="@string/username"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="end"
                    android:text="@string/황영합이당" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:contentDescription="@string/logo_user"
                    app:srcCompat="@drawable/seungminhead" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layerbody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/layerhead"
            app:layout_constraintBottom_toTopOf="@id/layerbody2"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="121dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:tabIndicatorColor="#000000"
                >


            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layerbody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/layerbody1">

            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:iconifiedByDefault="false"
                android:searchIcon="@drawable/ic_launcher_foreground"
                android:submitBackground="@drawable/ic_launcher_foreground"
                app:iconifiedByDefault="false"
                app:closeIcon="@drawable/seungminhead"
                app:queryHint="은어의 의미가 궁금하세요?" />
            <TextView
                android:id="@+id/newscript"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="bottom"
                android:text="범죄 관련 뉴스" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <TableRow
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/newscript"
                        app:srcCompat="@drawable/img_1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/newscript"
                        app:srcCompat="@drawable/img_2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/newscript"
                        app:srcCompat="@drawable/img_3" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/newscript"
                        app:srcCompat="@drawable/img_4" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layertail"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/layerbody2">
            <ImageView
                android:id="@+id/tailImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tailImg"
                android:src="@drawable/img_5"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>